# demo-rust-api

./: .gitignore  Cargo.toml  Dockerfile  README.md  catalog-info.yaml  mkdocs.yml
docs/: getting-started.md  index.md
src/: main.rs
